@@ -6,10 +6,13 @@
  */
 package edu.colorado.phet.movingman.ladybug
 
+import model.Vector2D
+
 object LadybugDefaults {
   var remoteIsIndicator = true
   var vaSticky = true
   var timelineLengthSeconds: Double = 15
   var pauseAtEndOfPlayback = true
   var recordAtEndOfPlayback = false
+  val defaultLocation = new Vector2D(5, 1)
 }
