@@ -1,5 +1,6 @@
 package edu.colorado.phet.movingman.ladybug
 
+import java.awt.event.{ActionEvent, ActionListener}
 import model.Vector2D
 import scala.swing.Component
 import java.awt.geom.Point2D
@@ -10,4 +11,8 @@ object LadybugUtil {
   implicit def pointToVector2D(point: Point2D) = new Vector2D(point.getX, point.getY)
 
   implicit def scalaSwingToAWT(component: Component) = component.peer
+
+  implicit def fnToActionListener(fn:()=>Unit)=new ActionListener(){
+    def actionPerformed(e: ActionEvent) = {fn()}
+  }
 }
